<resources>
    <string name="app_name">Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">My Nanodegree Apps!</string>

    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>

    <string name="toast_message">This will launch the %1$s app</string>
</resources>
